[package]
name = "pixels"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
image = "0.25.10"
ratatui = "0.30.0"
rayon = "1.11.0"
v4l = "0.14.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
